fix(CodeChunk): Show x-scrollbars for overflowing codechunks

--- a/src/common/styles/common.css
+++ b/src/common/styles/common.css
@@ -12,6 +12,12 @@
     background-color: transparent;
     height: 100%;
   }
+
+  .codeContainer {
+    pre {
+      overflow-x: auto;
+    }
+  }
 }
 
 html {
